--- a/index.html
+++ b/index.html
@@ -5,6 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__list-item">
+            <a class="nav__list-link link-active">главная</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__list-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="nav__list-item">
+            <a class="nav__list-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="logo">
+        <img 
+          class="logo__image"
+          src="./images/logo-black.svg" 
+          alt="Логотип оно тебе надо"
+        >
+      </a>
+      <address class="address">
+        <span class="address-item">
+          <a href="tel:+99995555555">+9 999 555 5555</a>
+        </span>
+        <span class="address-item">
+          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        </span>
+        <span class="address-item">наб. Принсенграхт 263- 265, Амстердам</span>
+      </address>
+    </header>
+    <main class="main">
+      <section class="cover"></section>
+      <section class="lots"></section>
+      <section class="about"></section>
+    </main>
+    <footer class="footer"></footer>
+  </body>
 </html>
