correct header classes, updated structure

--- a/index.html
+++ b/index.html
@@ -11,41 +11,126 @@
   </head>
   <body>
     <header class="header">
-      <nav class="nav">
-        <ul class="nav__list">
-          <li class="nav__list-item">
-            <a class="nav__list-link link-active">главная</a>
+      <nav class="header__navigation">
+        <ul class="header__navigation__list">
+          <li class="header__navigation__list-item">
+            <a class="header__navigation__list-link link-active">главная</a>
           </li>
-          <li class="nav__list-item">
-            <a class="nav__list-link" href="#0">посмотреть лоты</a>
+          <li class="header__navigation__list-item">
+            <a class="header__navigation__list-link" href="#0">посмотреть лоты</a>
           </li>
-          <li class="nav__list-item">
-            <a class="nav__list-link" href="#0">об аукционе</a>
+          <li class="header__navigation__list-item">
+            <a class="header__navigation__list-link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <a class="logo">
+      <a class="header__logo">
         <img 
-          class="logo__image"
+          class="header__logo-image"
           src="./images/logo-black.svg" 
           alt="Логотип оно тебе надо"
         >
       </a>
       <address class="address">
         <span class="address-item">
-          <a href="tel:+99995555555">+9 999 555 5555</a>
+          <a class="address-link" href="tel:+99995555555">+9 999 555 5555</a>
         </span>
         <span class="address-item">
-          <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+          <a class="address-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         </span>
-        <span class="address-item">наб. Принсенграхт 263- 265, Амстердам</span>
+        <span class="address-item">наб. Принсенграхт 263-265, Амстердам</span>
       </address>
     </header>
     <main class="main">
-      <section class="cover"></section>
-      <section class="lots"></section>
-      <section class="about"></section>
+      <section class="cover">
+        <h1>
+          <span></span>
+          <span></span>
+          <span></span>
+        </h1>
+        <div class="description">
+          <p></p>
+          <button></button>
+        </div>
+      </section>
+      <section class="lots">
+        <h2></h2>
+        <ul>
+          <li>
+            <a href="">
+              <article>
+                  <h3></h3>
+                  <p></p>
+              </article>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <article>
+                <h3></h3>
+                <p></p>
+              </article>
+            </a>
+          </li>
+          <li>
+            <a href="">
+              <article>
+                <h3></h3>
+                <p></p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a href=""></a>
+      </section>
+      <section class="about">
+        <div></div>
+        <div>
+          <h2></h2>
+          <p></p>
+        </div>
+      </section>
     </main>
-    <footer class="footer"></footer>
+    <footer class="footer">
+      <address class="address">
+        <span class="address-item">
+          <a class="address-link" href="tel:+99995555555">+9 999 555 5555</a>
+        </span>
+        <span class="address-item">
+          <a class="address-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        </span>
+        <span class="address-item">наб. Принсенграхт 263-265, Амстердам</span>
+      </address>
+      <nav class="footer__navigation">
+        <ul class="footer__navigation__list">
+          <li class="footer__navigation__list-item">
+            <a class="footer__navigation__list-link link-active">главная</a>
+          </li>
+          <li class="footer__navigation__list-item">
+            <a class="footer__navigation__list-link" href="#0">посмотреть лоты</a>
+          </li>
+          <li class="footer__navigation__list-item">
+            <a class="footer__navigation__list-link" href="#0">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul>
+        <li>
+          <a href="">
+            <img src="" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="" alt="">
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <img src="" alt="">
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
