correct address classes and correct header styles

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
           alt="Логотип оно тебе надо"
         >
       </a>
-      <address class="address">
-        <span class="address-item">
-          <a class="address-link" href="tel:+99995555555">+9 999 555 5555</a>
+      <address class="header__address">
+        <span class="header__address-item">
+          <a class="header__address-link" href="tel:+99995555555">+9 999 555 5555</a>
         </span>
-        <span class="address-item">
-          <a class="address-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <span class="header__address-item">
+          <a class="header__address-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         </span>
-        <span class="address-item">наб. Принсенграхт 263-265, Амстердам</span>
+        <span class="header__address-item">наб. Принсенграхт 263-265, Амстердам</span>
       </address>
     </header>
     <main class="main">
