added cover and correct styles header

--- a/index.html
+++ b/index.html
@@ -43,14 +43,17 @@
     </header>
     <main class="main">
       <section class="cover">
-        <h1>
-          <span></span>
-          <span></span>
-          <span></span>
+        <div class="overlay"></div>
+        <h1 class="cover__title">
+          <span class="cover__title-item">Оно</span>
+          <span class="cover__title-item text-center">тебе</span>
+          <span class="cover__title-item text-right">надо</span>
         </h1>
-        <div class="description">
-          <p></p>
-          <button></button>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="cover__description-button">Сделать ставку</button>
         </div>
       </section>
       <section class="lots">
