added all classes and full content to index.html

--- a/index.html
+++ b/index.html
@@ -57,40 +57,91 @@
         </div>
       </section>
       <section class="lots">
-        <h2></h2>
-        <ul>
-          <li>
-            <a href="">
-              <article>
-                  <h3></h3>
-                  <p></p>
+        <h2 class="section__titile">Лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link" href="#0">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы 
+                  ваша ставка, если бы вы не знали, что режиссёр — Пол 
+                  Томас Андерсон?
+                </p>
               </article>
             </a>
           </li>
-          <li>
-            <a href="">
-              <article>
-                <h3></h3>
-                <p></p>
+          <li class="lots__card-list-item card_type_book">
+            <a class="card-link" href="#0">
+              <article class="card">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания 
+                  и с переходами на древнеанглийский. В ней одновременно 
+                  рассказывается о 16 июня 1904 года и об истории литературы, 
+                  начиная с античных времён. И это всё накладывается на 
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» 
+                  Джеймса Джойса?
+                </p>
               </article>
             </a>
           </li>
-          <li>
-            <a href="">
-              <article>
-                <h3></h3>
-                <p></p>
+          <li class="lots__card-list-item card_type_picture">
+            <a class="card-link" href="#0">
+              <article class="card">
+                <div class="overlay"></div>
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, 
+                  а здесь и вовсе что-то похожее на инфузорию-туфельку. 
+                  Никаких полей, лесов, котиков... Сколько бы вы на такое 
+                  поставили, если бы не знали, что это — одна из революционных 
+                  работ Кандинского?
+                </p>
               </article>
             </a>
           </li>
         </ul>
-        <a href=""></a>
+        <a class="lots__look-more-link" href="#0">посмотреть больше</a>
       </section>
       <section class="about">
-        <div></div>
-        <div>
-          <h2></h2>
-          <p></p>
+        <div class="about__logo">
+          <img 
+            class="about__logo-image"
+            src="./images/logo-white.svg" 
+            alt="Белый логотип оно тебе надо"
+          >
+        </div>
+        <div class="about__text">
+          <h2 class="about__title">Об аукционе</h2>
+          <div class="about__column">
+            <p class="about__column-text">
+              Здесь вы не встретите очередное пафосное собрание невероятно 
+              дорогого антиквариата. Наши лоты вообще не должны были 
+              попасть ни на один аукцион. Потому что кому нужен дневник 
+              девочки-подростка или картина, которую может нарисовать 
+              даже ребёнок? Кому нужны все эти странные вещи, созданные 
+              любителями?
+            </p>
+            <p class="about__column-text">
+              Слишком сложные или, наоборот, 
+              слишком простые. Опережающие своё время. В пух и прах 
+              растерзанные критиками. Непринятые и непонятые. Когда-то 
+              они казались просто неудачными. Но, несмотря на критику, 
+              кажущуюся простоту или сложность, сейчас без этих лотов 
+              невозможно представить современную культуру. Когда в эти вещи 
+              не верил никто, продолжали верить их создатели. И сейчас эти 
+              лоты стали культовыми. 
+            </p>
+          </div>
         </div>
       </section>
     </main>
@@ -117,20 +168,32 @@
           </li>
         </ul>
       </nav>
-      <ul>
-        <li>
-          <a href="">
-            <img src="" alt="">
+      <ul class="footer__social-list-item">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img 
+              class="footer__social-icon" 
+              src="./images/yt.svg" 
+              alt="Логотип ютуба"
+            >
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="" alt="">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img 
+              class="footer__social-icon" 
+              src="./images/vk.svg" 
+              alt="Логотип вк"
+            >
           </a>
         </li>
-        <li>
-          <a href="">
-            <img src="" alt="">
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="#0">
+            <img 
+              class="footer__social-icon" 
+              src="./images/pinterest.svg" 
+              alt="Логотип пинтереста"
+            >
           </a>
         </li>
       </ul>
