added background and styles to lots

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
+    <div class="test"></div>
     <header class="header">
       <nav class="header__navigation">
         <ul class="header__navigation__list">
@@ -57,11 +58,11 @@
         </div>
       </section>
       <section class="lots">
-        <h2 class="section__titile">Лоты</h2>
+        <h2 class="lots__titile">Лоты</h2>
         <ul class="lots__card-list">
-          <li class="lots__card-list-item">
+          <li class="lots__card-list-item card_type_film">
             <a class="card-link" href="#0">
-              <article class="card card_type_film">
+              <article class="card">
                 <div class="overlay"></div>
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
