--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="about__text">
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__column">
-            <p class="about__column-text">
+            <p class="about__column-text ">
               Здесь вы не встретите очередное пафосное собрание невероятно 
               дорогого антиквариата. Наши лоты вообще не должны были 
               попасть ни на один аукцион. Потому что кому нужен дневник 
@@ -136,25 +136,27 @@
               Слишком сложные или, наоборот, 
               слишком простые. Опережающие своё время. В пух и прах 
               растерзанные критиками. Непринятые и непонятые. Когда-то 
-              они казались просто неудачными. Но, несмотря на критику, 
-              кажущуюся простоту или сложность, сейчас без этих лотов 
-              невозможно представить современную культуру. Когда в эти вещи 
-              не верил никто, продолжали верить их создатели. И сейчас эти 
-              лоты стали культовыми. 
+              они казались просто неудачными. Но, несмотря 
+              <span class="special-width">на критику, кажущуюся простоту 
+                или сложность, сейчас без этих лотов невозможно представить 
+                современную культуру. Когда в эти вещи не верил никто, 
+                продолжали верить их создатели. И сейчас эти лоты 
+                стали культовыми.
+              </span> 
             </p>
           </div>
         </div>
       </section>
     </main>
     <footer class="footer">
-      <address class="address">
-        <span class="address-item">
-          <a class="address-link" href="tel:+99995555555">+9 999 555 5555</a>
+      <address class="footer__address">
+        <span class="footer__address-item">
+          <a class="footer__address-link" href="tel:+99995555555">+9 999 555 5555</a>
         </span>
-        <span class="address-item">
-          <a class="address-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <span class="footer__address-item">
+          <a class="footer__address-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         </span>
-        <span class="address-item">наб. Принсенграхт 263-265, Амстердам</span>
+        <span class="footer__address-item">наб. Принсенграхт 263-265, Амстердам</span>
       </address>
       <nav class="footer__navigation">
         <ul class="footer__navigation__list">
