Correct style and index.html, added README.md

--- a/index.html
+++ b/index.html
@@ -10,9 +10,8 @@
     <link rel="stylesheet" href="./styles/style.css">
   </head>
   <body>
-    <div class="test"></div>
     <header class="header">
-      <nav class="header__navigation">
+      <nav>
         <ul class="header__navigation__list">
           <li class="header__navigation__list-item">
             <a class="header__navigation__list-link link-active">главная</a>
@@ -42,7 +41,7 @@
         <span class="header__address-item">наб. Принсенграхт 263-265, Амстердам</span>
       </address>
     </header>
-    <main class="main">
+    <main>
       <section class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
@@ -158,22 +157,22 @@
         </span>
         <span class="footer__address-item">наб. Принсенграхт 263-265, Амстердам</span>
       </address>
-      <nav class="footer__navigation">
+      <nav>
         <ul class="footer__navigation__list">
           <li class="footer__navigation__list-item">
-            <a class="footer__navigation__list-link link-active">главная</a>
+            <a class="link-active">главная</a>
           </li>
           <li class="footer__navigation__list-item">
-            <a class="footer__navigation__list-link" href="#0">посмотреть лоты</a>
+            <a href="#0">посмотреть лоты</a>
           </li>
           <li class="footer__navigation__list-item">
-            <a class="footer__navigation__list-link" href="#0">об аукционе</a>
+            <a href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
-      <ul class="footer__social-list-item">
-        <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
+      <ul class="footer__social-list">
+        <li>
+          <a href="#0">
             <img 
               class="footer__social-icon" 
               src="./images/yt.svg" 
@@ -181,8 +180,8 @@
             >
           </a>
         </li>
-        <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
+        <li>
+          <a href="#0">
             <img 
               class="footer__social-icon" 
               src="./images/vk.svg" 
@@ -190,8 +189,8 @@
             >
           </a>
         </li>
-        <li class="footer__social-list-item">
-          <a class="footer__social-link" href="#0">
+        <li>
+          <a href="#0">
             <img 
               class="footer__social-icon" 
               src="./images/pinterest.svg" 
