--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       <nav>
         <ul class="header__navigation__list">
           <li class="header__navigation__list-item">
-            <a class="header__navigation__list-link link-active">главная</a>
+            <a class="link-active">главная</a>
           </li>
           <li class="header__navigation__list-item">
-            <a class="header__navigation__list-link" href="#0">посмотреть лоты</a>
+            <a href="#0">посмотреть лоты</a>
           </li>
           <li class="header__navigation__list-item">
-            <a class="header__navigation__list-link" href="#0">об аукционе</a>
+            <a href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -31,14 +31,10 @@
           alt="Логотип оно тебе надо"
         >
       </a>
-      <address class="header__address">
-        <span class="header__address-item">
-          <a class="header__address-link" href="tel:+99995555555">+9 999 555 5555</a>
-        </span>
-        <span class="header__address-item">
-          <a class="header__address-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        </span>
-        <span class="header__address-item">наб. Принсенграхт 263-265, Амстердам</span>
+      <address class="address">
+        <a href="tel:+99995555555" target="_blank">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge" target="_blank">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -120,7 +116,7 @@
             alt="Белый логотип оно тебе надо"
           >
         </div>
-        <div class="about__text">
+        <article class="about__text">
           <h2 class="about__title">Об аукционе</h2>
           <div class="about__column">
             <p class="about__column-text ">
@@ -144,35 +140,31 @@
               </span> 
             </p>
           </div>
-        </div>
+        </article>
       </section>
     </main>
     <footer class="footer">
-      <address class="footer__address">
-        <span class="footer__address-item">
-          <a class="footer__address-link" href="tel:+99995555555">+9 999 555 5555</a>
-        </span>
-        <span class="footer__address-item">
-          <a class="footer__address-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        </span>
-        <span class="footer__address-item">наб. Принсенграхт 263-265, Амстердам</span>
+      <address class="address">
+        <a href="tel:+99995555555" target="_blank">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge" target="_blank">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav>
         <ul class="footer__navigation__list">
-          <li class="footer__navigation__list-item">
+          <li>
             <a class="link-active">главная</a>
           </li>
-          <li class="footer__navigation__list-item">
+          <li>
             <a href="#0">посмотреть лоты</a>
           </li>
-          <li class="footer__navigation__list-item">
+          <li>
             <a href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
       <ul class="footer__social-list">
         <li>
-          <a href="#0">
+          <a href="#0" target="_blank">
             <img 
               class="footer__social-icon" 
               src="./images/yt.svg" 
@@ -181,7 +173,7 @@
           </a>
         </li>
         <li>
-          <a href="#0">
+          <a href="#0" target="_blank">
             <img 
               class="footer__social-icon" 
               src="./images/vk.svg" 
@@ -190,7 +182,7 @@
           </a>
         </li>
         <li>
-          <a href="#0">
+          <a href="#0" target="_blank">
             <img 
               class="footer__social-icon" 
               src="./images/pinterest.svg" 
